fixing issue of description text being cut off

--- a/frontend/src/components/MenuSection/CreateItem.css
+++ b/frontend/src/components/MenuSection/CreateItem.css
@@ -66,6 +66,7 @@ color: #fff;
 margin-bottom: 15px;
 margin-left: auto;
 margin-right: auto;
+padding: 1rem;
 resize:none;
 width: 250px;
 height: 100px;
@@ -74,6 +75,7 @@ border: none;
 font-size: 15px;
 border-radius: 18px;
 text-align:justify;
+text-transform: none;
 background-color: #3d3d3d;
 color: #fff;
 }
